--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "vuetify": "^2.2.31"
   },
   "devDependencies": {
+    "deepmerge": "^4.2.2",
+    "fibers": "^5.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "7.3.1",
+    "vuetify-loader": "^1.6.0",
     "webpack-node-externals": "^1.7.2"
   }
 }
