--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "gridsome": "^0.7.0",
+    "gridsome-plugin-purgecss": "^1.0.12",
     "vuetify": "^2.2.31"
   },
   "devDependencies": {
